tests/neg/i18584/T.java
// test: -jvm 25+

int k = 0;
File f = null;
java.io.File g = f;
@Deprecated void main() { return; }
public record Person(String name, int age) { }
public class H { }
public static int k() { return 1; }
